nuevas agregaciones, correcciones
hasta funcionalidad Buscar Ingresos

--- a/carritoDeCompras.html
+++ b/carritoDeCompras.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios::GAVASOFT</title>
+    <title>CARRITO</title>
 </head>
 <body>
-    <h2 class="flex self-center p-1 h-7 bg-green-300 text-xl text-white">Servicios here!</h2>
+    <h1>Carrito de Compras</h1>
 </body>
 </html>
