--- a/consultaHistorialClientes.html
+++ b/consultaHistorialClientes.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/Gavasoft-Logo.svg" />
-    <title>Consultar Historial::GAVASOFT</title>
+    <title>Consultar Historial Cliente::GAVASOFT</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,7 +15,6 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,300,0,0" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="./styles/gestionSolicitudes.css" rel="stylesheet" />
 
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -70,16 +69,20 @@
         <nav
             class="flex mx-auto mt-12 justify-center overflow-x-auto overflow-y-hidden pt-4 pb-24 w-3/4 
               rounded-sm shadow-none text-sm md:pt-2 md:pb-20 md:shadow-slate-300 lg:pt-1.5 lg:pb-12 lg:shadow-md 
-              lg:shadow-slate-300 xl:pt-1.5 xl:pb-4 xl:shadow-md xl:shadow-slate-300 2xl:pt- 2xl:pb-4
+              lg:shadow-slate-300 xl:pt-1.5 xl:pb-12 xl:shadow-md xl:shadow-slate-300 2xl:pt- 2xl:pb-4
               2xl:shadow-md 2xl:shadow-slate-300"
         >
-            <ul class="flex bg-white flex-col ml-0 space-x-0.5 md:ml-0 lg:flex-row  
+            <ul class="flex flex-col ml-0 space-x-0.5 md:ml-0 lg:flex-row  
                   lg:ml-24 xl:flex-row xl:ml-0 2xl:flex-row 2xl:ml-0 ">
                 <li
-                    class="flex self-center text-indigo-600 px-1 h-8 
-                      lg:h-12 xl:h-12 2xl:h-12 hover:text-indigo-500"
+                    class="flex self-center text-indigo-600 px-1 h-10 
+                      md:my-auto lg:h-12 xl:my-auto xl:h-12 2xl:h-12 2xl:my-auto 
+                      hover:text-indigo-500"
                 >
-                    <a class="flex justify-center mt-auto w-24 px-1.5 w-16" href="./index.html">
+                    <a
+                        class="flex justify-center my-auto w-48 px-1.5 w-11"
+                        href="./index.html"
+                    >
                         Home
                     </a>
                 </li>
@@ -110,10 +113,10 @@
             >
                 <div class="flex flex-col space-y-2 mx-6 mb-1.5 py-1 md:mx-1.5 lg:mx-1.5 xl:mx-16 2xl:mx-16">
                     <div class="flex justify-between">
-                        <h5 class="text-xl text-zinc-600 font-bold">
+                        <div class="text-xl text-zinc-600 font-bold">
                             Bienvenida sr(a).
                             <span class="italic">Adriana Benavides</span>
-                        </h5>
+                        </div>
                         <img src="./assets/ABADOD-Logo.svg" width="36" class="" />
                     </div>
                     
