--- a/menuCliente.html
+++ b/menuCliente.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -99,10 +99,22 @@
                     </div>
                 </div>
             </div>
-            <div class="col-span-2 grid rounded-lg bg-neutral-300 justify-self-center">
+            <div class="col-span-2 grid rounded-lg bg-neutral-300 justify-self-center mb-3">
                 <img class="opacity-75" src="./assets/SPA-bed.png" width="450" />
             </div>
         </div>
+        <button
+            class="w-16 h-16 rounded-3xl bg-zinc-900 text-yellow-400 
+              fixed right-8 bottom-10 z-10 hover:bg-cyan-900 
+              hover:scale-110 hover:ease-out hover:duration-200 
+              hover:shadow-md hover:shadow-zinc-400"
+        >
+            <a href="./carritoDeCompras.html" class="p-2">
+                <span class="material-symbols-outlined text-3xl">
+                    shopping_cart
+                </span>
+            </a>
+        </button>
     </div>
 </body>
 
