--- a/adminAgenda.html
+++ b/adminAgenda.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/Gavasoft-Logo.svg" />
-    <title>Menú Administrador::GAVASOFT</title>
+    <title>Administrar agenda::GAVASOFT</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -15,7 +15,6 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,300,0,0" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="./styles/menuCliente.css" rel="stylesheet" />
 
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -61,7 +60,7 @@
         </header>
 
         <nav
-            class="flex mx-auto mt-12 justify-center overflow-x-auto overflow-y-hidden pt-4 pb-24 w-3/4 
+            class="flex mx-auto mt-24 justify-center overflow-x-auto overflow-y-hidden pt-4 pb-24 w-3/4 
               rounded-sm shadow-none text-sm md:pt-4 md:pb-6 md:shadow-slate-300 lg:pt-4 lg:pb-6 lg:shadow-md 
               lg:shadow-slate-300 xl:pt-4 xl:pb-6 xl:shadow-md xl:shadow-slate-300 2xl:pt-4 2xl:pb-6
               2xl:shadow-md 2xl:shadow-slate-300"
@@ -119,7 +118,7 @@
                               text-white px-5 py-2 w-36 h-9 hover:ring-zinc-300 
                               hover:bg-zinc-300 hover:text-zinc-900"
                         >
-                            <a href="./agregaEmpleado.html">Agregar agenda</a>
+                            <a href="./agregaAgenda.html">Agregar agenda</a>
                         </button>
                     </div>
                     <div class="flex space-x-3 w-64">
