--- a/adminServicios.html
+++ b/adminServicios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -15,7 +15,6 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,300,0,0" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="./styles/menuCliente.css" rel="stylesheet" />
 
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -112,7 +111,7 @@
                         <button class="flex rounded-md bg-zinc-400 ring-1 ring-zinc-600 shadow-md shadow-cyan-600 text-sm
                                 text-white px-5 py-3 w-36 h-11 md:h-12 lg:h-12 xl:h-11 2xl:h-10 hover:ring-zinc-300 
                                 hover:bg-zinc-300 hover:text-zinc-900">
-                            <a href="./creaEmpleado.html">Agregar servicio</a>
+                            <a href="./agregaServicio.html">Agregar servicio</a>
                         </button>
                     </div>
                     <div class="flex space-x-3 w-64 h-10">
