--- a/agregaServicio.html
+++ b/agregaServicio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/Gavasoft-Logo.svg" />
-    <title>Crear empleado::GAVASOFT</title>
+    <title>Agregar Servicio del Spa::GAVASOFT</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -58,44 +58,32 @@
             </div>
         </header>
 
-        <nav
-            class="flex mx-auto mt-16 justify-center overflow-x-auto overflow-y-hidden pt-4 pb-32 w-3/4 
-              rounded-sm text-sm md:pt-2 md:pb-20 lg:pt-1.5 lg:pb-12xl:mt-16 xl:pt-1.5 xl:pb-12
-              2xl:pt-2 2xl:pb-12"
-        >
-            <ul class="flex bg-white flex-col ml-0 space-x-0.5 md:ml-0 lg:flex-row  
+        <nav class="flex mx-auto mt-24 justify-center overflow-x-auto overflow-y-hidden pt-4 pb-32 w-3/4 
+              rounded-sm text-sm md:pt-0.5 md:pb-28 lg:pt-1.5 lg:pb-12xl:mt-16 xl:pt-1.5 xl:pb-12
+              2xl:pt-2 2xl:pb-12">
+            <ul class="flex flex-col ml-0 space-x-0.5 md:ml-0 lg:flex-row  
                   lg:ml-24 xl:flex-row xl:ml-0 2xl:flex-row 2xl:ml-0 ">
-                <li
-                    class="flex self-center mt-5 text-indigo-600 px-1 h-8 
-                      lg:h-12 xl:h-12 2xl:h-12 hover:text-indigo-500"
-                >
+                <li class="flex self-center mt-5 text-indigo-600 px-1 h-8 
+                      lg:h-12 xl:h-12 2xl:h-12 hover:text-indigo-500">
                     <a class="flex justify-center mt-auto w-24 px-1.5 w-16" href="./index.html">
                         Home
                     </a>
                 </li>
                 <li class="flex text-indigo-600 px-1 h-8 lg:h-12 xl:h-12 2xl:h-12 hover:text-indigo-500">
-                    <a
-                        class="flex justify-center my-auto w-48 px-1.5"
-                        href="./menuAdministrador.html"
-                    >
+                    <a class="flex justify-center my-auto w-48 px-1.5" href="./menuAdministrador.html">
                         / Menú Administrador
                     </a>
                 </li>
                 <li class="flex text-indigo-600 px-1 h-8 lg:h-12 xl:h-12 2xl:h-12 hover:text-indigo-500">
-                    <a
-                        class="flex justify-center my-auto w-48 px-1.5"
-                        href="./adminEmpleados.html"
-                    >
-                        / Administrar Empleados
+                    <a class="flex justify-center my-auto w-48 px-1.5" href="./adminServicios.html">
+                        / Administrar Servicios
                     </a>
                 </li>
                 <li class="flex w-max h-8 lg:h-12 xl:h-12 2xl:h-12 px-1">
-                    <span
-                        class="flex justify-center my-auto rounded-sm 
+                    <span class="flex justify-center my-auto rounded-sm 
                           bg-zinc-500 text-zinc-300 px-1.5 py-0.5 
-                          w-48 lg:py-1.5 xl:py-1.5 2xl:py-1.5"
-                    >
-                        / Crear empleado
+                          w-48 lg:py-1.5 xl:py-1.5 2xl:py-1.5">
+                        / Agregar Servicio
                     </span>
                 </li>
             </ul>
@@ -103,48 +91,65 @@
 
         <div class="flex justify-center mx-auto pt-4 gap-3 md:mx-24 lg:24 xl:mx-28 2xl:mx-28">
             <div class="flex flex-col rounded-lg justify-center items-center px-3 py-6 h-max-screen">
-                <div class="flex flex-col rounded-lg bg-neutral-100 text-center space-y-4 mb-8 px-1.5 py-3.5 w-9/12 md:w-5/6 
-                    lg:w-3/4 xl:w-full 2xl:full">
-                    <h2 class="text-sm text-zinc-600 font-bold md:text-md lg:text-lg xl:text-lg 2xl:text-lg">
+                <div class="flex flex-col rounded-lg bg-neutral-100 text-center space-y-4 mb-8 px-1.5 py-3.5 w-full">
+                    <span class="text-sm text-zinc-600 font-bold md:text-md lg:text-lg xl:text-lg 2xl:text-lg">
                         Bienvenido(a) sr(a).
                         <span class="italic">Ramón Arteta</span>
-                    </h2>
-                    <h1 class="text-md font-semibold mx-3.5 mt-1 md:text-lg lg:text-xl xl:text-xl 2xl:text-xl">
-                        FORMULARIO DE REGISTRO - NUEVO EMPLEADO</h1>
+                    </span>
+                    <h1 class="text-lg font-semibold mx-3.5 mt-1 md:text-lg lg:text-xl xl:text-2xl 2xl:text-3xl">
+                        FORMULARIO NUEVO SERVICIO
+                    </h1>
                 </div>
                 <form
                     action="/#"
-                    class="flex flex-col space-y-6 rounded-lg ring-1 ring-zinc-900 
-                      bg-slate-200 justify-self-center px-7 py-10 w-11/12 md:w-5/6 
-                      lg:w-3/4 xl:w-11/12 2xl:w-11/12"
+                    class="flex flex-col rounded-lg ring-1 ring-zinc-900 
+                      bg-slate-200 justify-self-center px-9 py-12 w-11/12 md:w-5/6 
+                      lg:w-full xl:w-11/12 2xl:w-11/12"
                 >
-                    <fieldset class="grid grid-cols-2 grid-rows-2 gap-x-3.5 gap-y-8">
-                        <legend class="mb-2 pl-1">Información básica</legend>
-                        <input type="text" class="h-8 rounded-md outline-2 outline-amber-300 ring-1 ring-stone-300 pl-2"
-                            placeholder="apellidos" />
-                        <input type="text" class="h-8 rounded-md outline-2 outline-amber-300 ring-1 ring-stone-300 pl-2"
-                            placeholder="nombre" />
-                        <input type="email"
-                            class="h-8 rounded-md outline-2 outline-amber-300 pl-2 ring-1 ring-stone-300"
-                            placeholder="correo electrónico" />
-                        <input type="tel" class="h-8 rounded-md outline-2 outline-amber-300 pl-2 ring-1 ring-stone-300"
-                            placeholder="teléfono" />
-                    </fieldset>
-                    <hr class="h-0.5 bg-zinc-500">
-                    <fieldset class="grid grid-rows-1 gap-y-6">
-                        <legend class="mb-2">Fechas importantes dentro de la organización</legend>
-                        <div class="flex flex-col-reverse">
-                            <label class="ml-0.5"><small>Fecha de ingreso</small></label>
-                            <input type="date" class="h-8 outline-2 outline-amber-300 pl-2 ring-1 ring-stone-300" />
+                    <fieldset class="grid grid-rows-6 gap-y-2 mb-8">
+                        <legend class="mb-1.5 font-mono font-semibold">Agregar Servicio del Spa</legend>
+                        <hr class="w-9/12 h-0.5 bg-zinc-400">
+                        <input
+                            type="text"
+                            class="w-10/12 h-10 rounded-md outline-2 outline-amber-300 ring-1 ring-stone-300 pl-2 lg:w-full xl:w-10/12 2xl:w-11/12"
+                            placeholder="Título"
+                         />
+                        <div class="flex flex-col-reverse mb-3 w-10/12 lg:w-full xl:w-10/12 2xl:w-11/12">
+                            <label class="text-sm self-center text-zinc-700">
+                                Imágen del servicio en extensión .jpg o .jpeg
+                            </label>
+                            <input
+                                type="file"
+                                accept=".jpg, .jpeg"
+                                class="h-7 rounded-md outline-2 outline-amber-300 ring-1 ring-stone-300 pl-2 pt-0.5"
+                             />
+                        </div>
+
+                        <input
+                            type="text"
+                            class="w-10/12 h-10 rounded-md outline-2 outline-amber-300 pl-2 ring-1 ring-stone-300 lg:w-full xl:w-10/12 2xl:w-11/12"
+                            placeholder="Descripción"
+                         />
+                        <input
+                            type="number"
+                            class="w-10/12 h-10 rounded-md outline-2 outline-amber-300 pl-2 ring-1 ring-stone-300 lg:w-full xl:w-10/12 2xl:w-11/12"
+                            placeholder="Valor (COP)"
+                         />
+                        <div class="flex flex-col-reverse w-10/12 lg:w-full xl:w-10/12 2xl:w-11/12">
+                            <label class="text-sm self-center text-zinc-700">
+                                Duración/tiempo
+                            </label>
+                            <input
+                                type="time"
+                                class="h-10 rounded-md outline-2 outline-amber-300 pl-2 ring-1 ring-stone-300"
+                             />
                         </div>
                     </fieldset>
-                    <hr class="h-0.5 bg-zinc-500">
-                    <fieldset class="grid grid-cols-2 gap-x-3.5">
-                        <legend class="mb-2">Contraseña</legend>
-                        <input class="h-8 rounded-md outline-2 outline-amber-300 pl-2 ring-1 ring-stone-300 pl-1.5" placeholder="*********" />
-                        <input class="h-8 rounded-md outline-2 outline-amber-300 pl-2 ring-1 ring-stone-300 pl-1.5" placeholder="Confirmar contraseña" />
-                    </fieldset>
-                    <button class="w-full h-10 rounded-md bg-green-600 text-center text-white py-1.5 hover:bg-cyan-500" type="submit">ENVIAR</button>
+
+                    <button class="w-full h-10 rounded-md bg-green-600 text-center text-white py-1.5 hover:bg-cyan-500"
+                        type="submit">
+                        GUARDAR
+                    </button>
                 </form>
             </div>
         </div>
