--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -18,29 +18,47 @@
 
 <body>
     <div
-        class="grid grid-cols-1 static bg-gray-200 h-screen md:h-screen lg:grid-cols-4 
-          lg:h-screen xl:grid-cols-4 xl:h-screen 2xl:grid-cols-4 2xl:h-screen"
+        class="grid grid-cols-1 static h-screen md:h-screen md:bg-slate-200 
+          lg:grid-cols-4 lg:h-screen lg:bg-slate-200 xl:grid-cols-4 
+          xl:h-screen xl:bg-slate-200 2xl:grid-cols-4 
+          2xl:h-screen 2xl:bg-slate-200"
         id="container"
     >
-        <div class="collapse md:visible md:col-span-2 lg:visible lg:col-span-2 xl:visible xl:col-span-2 2xl:col-span-2" id="sideA">
+        <div
+            class="collapse md:visible md:col-span-2 lg:visible lg:col-span-2 
+              xl:visible xl:col-span-2 2xl:col-span-2"
+              id="sideA"
+        >
             <div class="flex justify-end mr-4 mt-1">
                 <button class="mr-5 h-6 rounded-md">
-                    <span class="small material-icons text-indigo-500">
-                        keyboard_arrow_left
-                    </span>
+                    
                 </button>
                 <ul class="flex text-indigo-600">
-                    <li><a href="#">Landing Page</a></li>
+                    <li>
+                        <a href="#" class="flex">
+                            Home
+                            <span class="ml-0.5 material-icons text-sm text-indigo-500">
+                                home
+                            </span>
+                        </a>
+                    </li>
                     <li><span class="ml-1 text-zinc-600">/ Iniciar sesión</span></li>
                 </ul>
             </div>
         </div>
-        <div class="absolute top-0 left-0 right-0 md:right-0 md:col-span-2 lg:relative lg:col-span-2 xl:relative xl:col-span-2 2xl:relative 2xl:col-span-2" id="sideB">
+        <div
+            class="absolute top-0 left-0 right-0 md:right-0 md:col-span-2 lg:relative 
+              lg:col-span-2 xl:relative xl:col-span-2 2xl:relative 2xl:col-span-2"
+            id="sideB"
+        >
             <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
                 <div class="sm:mx-auto sm:w-full sm:max-w-sm">
                     <img class="mx-auto w-auto h-16 rounded-sm" src="./assets/Gavasoft-Logo.svg" alt="Abadod" />
-                    <h2 class="mt-10 text-center text-2xl login-form-title
-                          leading-9 tracking-tight text-gray-900">
+                    <h2
+                        class="mt-10 text-center text-2xl login-form-title leading-9 
+                          tracking-tight text-white lg:text-zinc-900 
+                          xl:text-zinc-900 2xl:text-zinc-900"
+                    >
                         INICIAR SESIÓN
                     </h2>
                 </div>
@@ -62,7 +80,7 @@
                         <div>
                             <div class="flex flex-col space-y-1.5">
                                 <div class="text-sm self-end">
-                                    <a href="#" class="font-semibold text-indigo-600 hover:text-indigo-500">¿Olvidaste
+                                    <a href="#" class="font-semibold" id="forgot-psw">¿Olvidaste
                                         tu contraseña?</a>
                                 </div>
                                 <input id="password" name="password" type="password" autocomplete="current-password"
@@ -75,11 +93,13 @@
                         </div>
 
                         <div>
-                            <button type="submit" class="flex w-full justify-center rounded-md bg-indigo-600
-                                  px-3 py-1.5 text-sm font-semibold leading-6 text-white
-                                  shadow-sm hover:bg-indigo-500 focus-visible:outline
-                                  focus-visible:outline-2 focus-visible:outline-offset-2
-                                  focus-visible:outline-indigo-600">
+                            <button
+                                id="submit"
+                                type="submit"
+                                class="flex w-full justify-center rounded-md 
+                                  px-3 py-1.5 text-sm font-semibold leading-6 
+                                  text-white shadow-sm"
+                            >
                                 Ingresar
                             </button>
                         </div>
