--- a/perfilEmpleado.html
+++ b/perfilEmpleado.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -15,19 +15,16 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,300,0,0" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="./styles/gestionSolicitudes.css" rel="stylesheet" />
 
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
     <div class="flex flex-col h-screen overflow-y-auto">
-        <header
-            class="flex flex-col space-y-2 justify-between px-8 py-3 w-screen fixed top-0 
+        <header class="flex flex-col space-y-2 justify-between px-8 py-3 w-screen fixed top-0 
               bg-gradient-to-r from-indigo-600 to-fuchsia-700 md:flex-row md:space-y-0 
               lg:flex-row lg:space-y-0 xl:flex-row xl:space-y-0 2xl:flex-row 
-              xl:space-y-0 md:px-20 lg:px-24 xl:px-24 2xl:px-24"
-        >
+              xl:space-y-0 md:px-20 lg:px-24 xl:px-24 2xl:px-24">
             <div class="flex space-x-6 text-white">
                 <span class="material-symbols-outlined">menu</span>
                 <div>
@@ -62,14 +59,15 @@
             </div>
         </header>
 
-        <nav
-            class="flex mx-auto mt-12 mb-1 justify-center overflow-x-auto overflow-y-hidden pt-4 pb-24 w-3/4 
-              rounded-sm shadow-none text-sm md:pt-2 md:pb-20 md:shadow-slate-300 lg:pt-1.5 lg:pb-16 lg:shadow-md 
-              lg:shadow-slate-300 xl:pt-1.5 xl:pb-16 xl:shadow-md xl:shadow-slate-300 2xl:pt-2 2xl:pb-16
-              2xl:shadow-md 2xl:shadow-slate-300"
-        >
-            <ul class="flex bg-white flex-col ml-0 space-x-0.5 md:ml-0 lg:flex-row  
-                  lg:ml-24 xl:flex-row xl:ml-0 2xl:flex-row 2xl:ml-0 ">
+        <nav class="flex mx-auto mt-20 mb-1 justify-center overflow-x-auto overflow-y-hidden pt-4 pb-44 w-3/4 
+              rounded-sm shadow-none text-sm md:pt-0.5 md:pb-48 md:shadow-slate-300 lg:pt-3 lg:pb-12 lg:shadow-md 
+              lg:shadow-slate-300 xl:pt-1.5 xl:pb-5 xl:shadow-md xl:shadow-slate-300 2xl:pt-2 2xl:pb-20
+              2xl:shadow-md 2xl:shadow-slate-300">
+            <ul
+                class="flex flex-col ml-0 space-x-0.5 space-y-1.5 md:ml-0 md:space-y-1.5 lg:flex-row  
+                  lg:space-y-0 lg:ml-24 xl:flex-row xl:space-y-0 xl:ml-0 2xl:flex-row 2xl:space-y-0 
+                  2xl:ml-0"
+            >
                 <li class="flex self-center my-auto text-indigo-600 ml-0 px-1 h-8 
                       lg:ml-48 xl:ml-48 2xl:ml-56 lg:h-12 xl:h-12 2xl:h-12 hover:text-indigo-500">
                     <a class="flex justify-center my-auto w-24 px-1.5 w-16" href="./index.html">
@@ -82,17 +80,17 @@
                     </a>
                 </li>
                 <li class="flex text-indigo-600 px-1 h-8 lg:h-12 xl:h-12 2xl:h-12 hover:text-indigo-500">
-                    <a class="flex justify-center my-auto w-48 px-1.5" href="./.html">
+                    <a class="flex justify-center my-auto w-48 px-1.5" href="./adminEmpleados.html">
                         / Administrar empleados
                     </a>
                 </li>
                 <li class="flex text-indigo-600 px-1 h-8 lg:h-12 xl:h-12 2xl:h-12 hover:text-indigo-500">
-                    <a class="flex justify-center my-auto w-48 px-1.5" href="./.html">
+                    <a class="flex justify-center my-auto w-48 px-1.5" href="./consultaEmpleado.html">
                         / Consultar Empleado
                     </a>
                 </li>
                 <li class="flex text-indigo-600 px-1 h-8 lg:h-12 xl:h-12 2xl:h-12 hover:text-indigo-500">
-                    <a class="flex justify-center my-auto w-48 px-1.5" href="./.html">
+                    <a class="flex justify-center my-auto w-48 px-1.5" href="./realizaConsultaEmpleado.html">
                         / Realizar Consulta
                     </a>
                 </li>
@@ -106,7 +104,7 @@
             </ul>
         </nav>
 
-        <div class="flex flex-col mx-2 pt-9 gap-3 md:mx-24 lg:24 xl:mx-28 2xl:mx-28">
+        <div class="flex flex-col mx-2 pt-1.5 gap-3 md:mx-24 lg:24 xl:mx-28 2xl:mx-28">
             <div class="flex flex-col rounded-lg justify-center space-y-11 
                   items-center mx-auto px-4 py-8 w-11/12 h-full">
                 <h2 class="text-lg font-bold md:text-xl lg:text-xl xl:text-2xl 2xl:text-3xl">
@@ -116,8 +114,8 @@
                       md:grid-cols-3 md:grid-rows-2 lg:grid-cols-3 
                       lg:grid-rows-2 xl:grid-cols-3 xl:grid-rows-2 
                       2xl:grid-cols-3 2xl:grid-rows-2">
-                    <div class="row-span-3">
-                        <img src="./assets/ejemplo-perfil.jpeg" />
+                    <div class="row-span-3 bg-gray-500">
+                        <img src="./assets/ejemplo-perfil.jpeg" id="empleado-pic" />
                     </div>
                     <div>
                         <h5 class="text-sm font-semibold">Tipo documento</h5>
@@ -144,25 +142,177 @@
                         <span class="text-sm">02-03-2020</span>
                     </div>
                 </div>
-                <div class="flex flex- row space-x-3.5 self-center">
-                    <button
-                        class="flex px-3 py-1 rounded-sm bg-indigo-600 
-                          hover:bg-indigo-500 text-white"
-                    >
+                <div class="flex space-x-3.5 self-center">
+                    <button class="flex px-3 py-1 rounded-sm bg-indigo-600 
+                          hover:bg-indigo-500 text-white" id="edit-btn" onclick="
+                            document.querySelector('body').setAttribute(
+                                'class',
+                                'transition-opacity ease-in duration-300 backdrop-opacity-50 backdrop-filter backdrop-gray-scale ' +
+                                'backdrop-blur-md backdrop-contrast-125 backdrop-brightness-50 z-0'
+                            );
+                            document.querySelectorAll('a').forEach(
+                                link => {
+                                    link.toggleAttribute('href', false),
+                                    link.setAttribute('class', 'text-zinc-500')
+                                }
+                            );
+                            document.querySelector('#edit-modal').setAttribute(
+                                'class',
+                                'inline-block rounded-md mx-auto px-4 py-1.3 z-10 bg-white ' +
+                                'fixed left-2 right-2 top-44 bottom-32 w-10/12 ' +
+                                'min-h-max md:w-7/12 lg:w-5/12 xl:w-7/12 2xl:w-7/12'
+                            );
+                            const editBtnSelector = document.querySelector('#edit-btn');
+                            editBtnSelector.toggleAttribute('disabled');
+                            editBtnSelector.setAttribute(
+                                'class',
+                                'flex px-3.5 py-1 rounded-sm bg-neutral-800 text-white'
+                            );
+                            const delBtnSelector = document.querySelector('#delete-btn');
+                            delBtnSelector.toggleAttribute('disabled');
+                            delBtnSelector.setAttribute(
+                                'class',
+                                'flex px-3 py-1 rounded-sm bg-neutral-800 text-white'
+                            );
+                            document.querySelector('#empleado-pic').setAttribute('class', 'opacity-40');
+                        ">
                         <span class="material-symbols-outlined mr-0.5">
                             edit
                         </span>
                         Modificar
                     </button>
                     <button
-                        class="flex px-3.5 py-1 rounded-sm bg-red-600 
-                          hover:bg-red-500 text-white"
-                    >
+                        class="flex px-3 py-1 rounded-sm bg-red-600 
+                          hover:bg-red-500 text-white" id="delete-btn"
+                        onclick="
+                            document.querySelector('body').setAttribute(
+                                'class',
+                                'transition-opacity ease-in duration-300 backdrop-opacity-50 backdrop-filter backdrop-gray-scale ' +
+                                'backdrop-blur-md backdrop-contrast-125 backdrop-brightness-50 z-0'
+                            );
+                            document.querySelectorAll('a').forEach(
+                                link => {
+                                    link.toggleAttribute('href', false),
+                                    link.setAttribute('class', 'text-zinc-500')
+                                }
+                            );
+                            document.querySelector('#delete-modal').setAttribute(
+                                'class',
+                                'inline-block rounded-md mx-auto px-4 py-1.3 z-10 bg-white ' +
+                                'fixed left-2 right-2 top-44 bottom-32 w-10/12 ' +
+                                'min-h-max md:w-7/12 lg:w-5/12 xl:w-7/12 2xl:w-7/12'
+                            );
+                            document.querySelector('#edit-btn').toggleAttribute('disabled');
+                            document.querySelector('#edit-btn').setAttribute(
+                                'class',
+                                'flex px-3.5 py-1 rounded-sm bg-neutral-800 text-white'
+                            );
+                            document.querySelector('#delete-btn').toggleAttribute('disabled');
+                            document.querySelector('#delete-btn').setAttribute(
+                                'class',
+                                'flex px-3 py-1 rounded-sm bg-neutral-800 text-white'
+                            );
+                            document.querySelector('#empleado-pic').setAttribute('class', 'opacity-40');
+                        ">
                         <span class="material-symbols-outlined mr-0.5">
                             delete
                         </span>
                         Eliminar
                     </button>
                 </div>
+
+                <!-- Ventana modal de Modificación Empleado -->
+                <div class="hidden flex flex-col" role="dialog" aria-modal="true" id="edit-modal">
+                    <button
+                        type="button"
+                        class="flex rounded-sm bg-black 
+                          text-white w-6 h-6 ml-auto my-3 hover:bg-zinc-500"
+                        onclick="
+                            document.querySelector('body').removeAttribute('class');
+                            document.querySelectorAll('a').forEach(
+                                link => {
+                                    link.toggleAttribute('href', true),
+                                    link.setAttribute(
+                                        'class',
+                                        'flex justify-center my-auto w-48 px-1.5'
+                                    )
+                                }
+                            );
+                            document.querySelector('#edit-modal').setAttribute(
+                                'class',
+                                'hidden z-0'
+                            );
+                            document.querySelector('#empleado-pic').setAttribute(
+                                'class',
+                                'opacity-100'
+                            );
+                            document.querySelector('#edit-btn').toggleAttribute(
+                                'disabled',
+                                false
+                            );
+                            document.querySelector('#edit-btn').setAttribute(
+                                'class',
+                                'flex px-3 py-1 rounded-sm bg-indigo-600 hover:bg-indigo-500 text-white'
+                            );
+                            document.querySelector('#delete-btn').removeAttribute('disabled');
+                            document.querySelector('#delete-btn').setAttribute(
+                                'class',
+                                'flex px-3 py-1 rounded-sm bg-red-600 hover:bg-red-500 text-white'
+                            );
+                        "
+                    >
+                        <span class="material-symbols-outlined">close</span>
+                    </button>
+                    <p class="mx-4">Formulario de Modificación Empleado</p>
+                </div>
+
+                <!-- Ventana modal de Eliminación Cuenta Empleado -->
+                <div class="hidden flex flex-col" role="dialog" aria-modal="true" id="delete-modal">
+                    <button
+                        type="button"
+                        class="flex rounded-sm bg-black 
+                          text-white w-6 h-6 ml-auto my-3 hover:bg-zinc-500"
+                        onclick="
+                            document.querySelector('body').removeAttribute('class');
+                            document.querySelectorAll('a').forEach(
+                                link => {
+                                    link.toggleAttribute('href', true),
+                                    link.setAttribute(
+                                        'class',
+                                        'flex justify-center my-auto w-48 px-1.5'
+                                    )
+                                }
+                            );
+                            document.querySelector('#delete-modal').setAttribute(
+                                'class',
+                                'hidden z-0'
+                            );
+                            document.querySelector('#empleado-pic').setAttribute(
+                                'class',
+                                'opacity-100'
+                            );
+                            document.querySelector('#edit-btn').toggleAttribute(
+                                'disabled',
+                                false
+                            );
+                            document.querySelector('#edit-btn').setAttribute(
+                                'class',
+                                'flex px-3 py-1 rounded-sm bg-indigo-600 hover:bg-indigo-500 text-white'
+                            );
+                            document.querySelector('#delete-btn').removeAttribute('disabled');
+                            document.querySelector('#delete-btn').setAttribute(
+                                'class',
+                                'flex px-3 py-1 rounded-sm bg-red-600 hover:bg-red-500 text-white'
+                            );
+                        "
+                    >
+                        <span class="material-symbols-outlined">close</span>
+                    </button>
+                    <h3 class="mx-4">Confirmación sobre eliminación de cuenta Empleado</h3>
+                </div>
             </div>
         </div>
+    </div>
+</body>
+
+</html>
