--- a/login.html
+++ b/login.html
@@ -64,16 +64,20 @@
                 </div>
 
                 <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-                    <form class="space-y-6" action="#" method="POST">
+                    <form class="flex flex-col space-y-8" action="#" method="GET">
                         <div>
                             <div class="mt-2">
-                                <input id="email" name="email" type="email" autocomplete="email"
+                                <input
+                                    id="email"
+                                    name="email"
+                                    type="email" autocomplete="email"
                                     placeholder="Correo electrónico" required class="block w-full h-10 rounded-md border-0
                                       px-2 py-1.5 text-gray-900 shadow-sm
                                       ring-1 ring-inset ring-gray-300
                                       placeholder:text-gray-400 focus:ring-2
                                       focus:ring-inset focus:ring-indigo-600
-                                      sm:text-sm sm:leading-6">
+                                      sm:text-sm sm:leading-6"
+                                />
                             </div>
                         </div>
 
