--- a/registroClientes.html
+++ b/registroClientes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrarse::GAVASOFT</title>
+    <title>Registro::GAVASOFT</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -115,7 +115,6 @@
                         <fieldset class="flex flex-col self-center">
                             <button class="h-10 mx-auto px-7 justify-center rounded-3xl bg-blue-800 text-white hover:transition hover:delay-100 hover:ease-out hover:duration-200 hover:-skew-x-2 hover:scale-110 hover:bg-blue-600 hover:text-amber-200">Ingresar con Google</button>
                         </fieldset>
-
                     </form>
                 </div>
             </div>
